# condash

./: 2025_SUSE_hackweek_submission_form.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
Formula/: condash.rb
configs/: docker-compose.yaml
configs/grafana/dashboards/: condash.json
configs/grafana/provisioning/dashboards/: dashboards.yaml
src/: browser.rs  config.rs  docker.rs  health.rs  main.rs
src/.github/workflows/: ci.yaml  release.yaml
